# contact_app

./: README.md  db.sqlite3  manage.py  pyproject.toml
contacts/: tests.py  views.py
contacts/migrations/: 0001_initial.py
contacts/templates/contacts/: contact_list.html
image/: diagramme d'activité 1  diagramme d'activité 2  diagramme de sequence 2  diagramme de sequence contact
mycontactapp/: asgi.py  settings.py  urls.py  wsgi.py
