[tool.poetry]
name = "django-contact-app"
version = "0.1.0"
description = ""
authors = ["Farid <farid.ousmane01@gmail.com~>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
django-widget-tweaks = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
